ReaderBuilderCustomizer through PulsarReader